--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -8,3 +11,4 @@
     "mongoose": "^8.6.1"
   }
 }
+
