--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 # MongoDB connection URI
-MONGO_URI=mongodb+srv://user:user725@mern.xa35g.mongodb.net/?retryWrites=true&w=majority&appName=MERN
+MONGO_URI=mongodb+srv://Mani:123@myatlasclusteredu.smiut.mongodb.net/?retryWrites=true&w=majority&appName=myAtlasClusterEDU
 
 # Port number
 PORT=10000
